--- a/src/style/home.css
+++ b/src/style/home.css
@@ -1,15 +1,15 @@
-div a {
+div .box {
     display: inline-block;
     margin: 20px 15px 20px 15px;
   }
   
-a {
+.box {
     text-decoration: none; 
     list-style-type: none; 
     font-size: 17px;
     font-weight: bold;
-    color: #ec951b;
-    border: 1px solid black;
+    color: #ff9f19;
+    border: 1px solid rgb(255, 255, 255);
     border-radius: 15px;
     width: 100px;
     height: 100px;
