--- a/src/style/category.css
+++ b/src/style/category.css
@@ -3,31 +3,149 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 35%;
-    width: 15%;
-    margin: 10px;
-    padding: 10px 15px;
     border-radius: 15px;
     background-color: rgb(51, 58, 115, 0.7);
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
 }
 
 .Play-text {
-    font-size: 40px;
     background: -webkit-linear-gradient(#ec951b, #eeff00);
-    padding: 0 15px;
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
-    margin: 10px 20px 30px 20px;
 }
 
-.image {
-    width: 475px;
-    height: 475px;
+ul {
+    list-style: none;
 }
 
-.Play li { 
+.answers { 
     text-decoration: none; 
     list-style-type: none; 
     cursor: pointer;
+    border: 2px  solid black;
+    font-weight: bold;
+    border-radius: 15px;
 }
+  
+
+/* Smartfony (do 767px) */
+@media screen and (max-width: 767px) {
+    .Play {
+        height: 20%;
+        width: 25%;
+        margin: 10px;
+        padding: 10px 25px;
+    }
+    
+    .Play-text {
+        font-size: 20px;
+        padding: 0 15px;
+        margin: 10px 20px 5px 20px;
+        width: 100px;
+    }
+    
+    .question {
+        margin: 0 0 15px 0;
+        font-size: 20px;
+    }
+    
+    .image {
+        width: 350px;
+        height: 350px;
+    }
+    
+    ul {
+        padding-left: 0;
+    }
+    
+    .answers { 
+        margin: 10px;
+        font-size: 18px;
+    }
+    
+    .correct-answers {
+        margin: 0;
+        font-size: 14px;
+    }
+  }
+  
+  /* Tablety (768px - 1023px) */
+  @media screen and (min-width: 768px) and (max-width: 1023px) {
+    .Play {
+        height: 30%;
+        width: 15%;
+        margin: 10px;
+        padding: 10px 15px;
+    }
+    
+    .Play-text {
+        font-size: 30px;
+        padding: 0 15px;
+        margin: 10px 20px 15px 20px;
+        width: 150px;
+    }
+    
+    .question {
+        margin: 0 0 30px 0;
+    }
+    
+    .image {
+        width: 500px;
+        height: 400px;
+    }
+    
+    ul {
+        padding-left: 0;
+    }
+    
+    .answers { 
+        margin: 10px;
+        font-size: 19px;
+    }
+    
+    .correct-answers {
+        font-size: 20px;
+        margin: 10px 0;
+    }
+  }
+  
+  /* Komputery (od 1024px wzwyż) */
+  @media screen and (min-width: 1024px) {
+    .Play {
+        height: 33%;
+        width: 15%;
+        margin: 10px;
+        padding: 5px 15px;
+    }
+    
+    .Play-text {
+        font-size: 40px;
+        padding: 0 5px;
+        margin: 10px 20px 15px 20px;
+        width: 200px;
+    }
+    
+    .question {
+        margin: 0 0 15px 0;
+    }
+    
+    .image {
+        width: 550px;
+        height: 450px;
+    }
+    
+    ul {
+        padding-left: 0;
+    }
+    
+    .answers { 
+        margin: 10px;
+        font-size: 19px;
+    }
+    
+    .correct-answers {
+        font-size: 20px;
+    }
+  }
+  
